--- a/3.website/assets/css/style.css
+++ b/3.website/assets/css/style.css
@@ -4,336 +4,340 @@
 Base style
 */
 body {
-    font-family: 'Noto Sans JP', "Helvetica Neue", "Helvetica", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Yu Gothic", "Meiryo", sans-serif;
-    font-size: 15px;
-    line-height: 1.5;
-    color: #333;
+  font-family: "Noto Sans JP", "Helvetica Neue", "Helvetica", "Hiragino Sans",
+    "Hiragino Kaku Gothic ProN", "Arial", "Yu Gothic", "Meiryo", sans-serif;
+  font-size: 15px;
+  line-height: 1.5;
+  color: #333;
 }
-label, input, textarea, select, button {
-    cursor: pointer;
+label,
+input,
+textarea,
+select,
+button {
+  cursor: pointer;
 }
 button {
-    border: 0;
+  border: 0;
 }
 
 /* 
 grid
 */
 .grid {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .grid-item {
-    list-style: none;
+  list-style: none;
 }
 .grid-col-2 > .grid-item {
-    width: 50%;
+  width: 50%;
 }
 .grid-col-3 > .grid-item {
-    width: 33.3%;
+  width: 33.3%;
 }
 .grid-col-4 > .grid-item {
-    width: 25%;
+  width: 25%;
 }
-@media screen and (max-width: 768px){
-    .grid {
-        display: block;
-    }
-    .grid-col-2 > .grid-item,
-    .grid-col-3 > .grid-item,
-    .grid-col-4 > .grid-item {
-        width: 100%;
-        margin: 20px 0;
-    }
-
+@media screen and (max-width: 768px) {
+  .grid {
+    display: block;
+  }
+  .grid-col-2 > .grid-item,
+  .grid-col-3 > .grid-item,
+  .grid-col-4 > .grid-item {
+    width: 100%;
+    margin: 20px 0;
+  }
 }
 
 /* 
 section
 */
 .section {
-    padding: 30px 15px;
+  padding: 30px 15px;
 }
 .section.section-secounday {
-    background: hsl(0, 0%, 94%);
+  background: hsl(0, 0%, 94%);
 }
 .section-headline {
-    text-align: center;
-    font-size: 40px;
-    font-weight: bold;
-    margin: 0 0 40px;
+  text-align: center;
+  font-size: 40px;
+  font-weight: bold;
+  margin: 0 0 40px;
 }
 .section-button {
-    margin: 40px 0 0;
-    text-align: center;
+  margin: 40px 0 0;
+  text-align: center;
 }
-@media screen and (max-width: 768px){
-    .section {
-        padding: 20px 10px;
-    }
-    .section-headline {
-        font-size: 30px;
-        margin: 0 0 20px;
-    }
-    .section-button {
-        margin: 20px 0 0;
-    } 
+@media screen and (max-width: 768px) {
+  .section {
+    padding: 20px 10px;
+  }
+  .section-headline {
+    font-size: 30px;
+    margin: 0 0 20px;
+  }
+  .section-button {
+    margin: 20px 0 0;
+  }
 }
 
 /* 
 header
 */
 .header {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 15px;
-    position: fixed;
-    z-index: 10;
-    top: 0;
-    left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 15px;
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
 }
 .header-logo {
-    margin: 0;
+  margin: 0;
 }
 .header-logo > a {
-    display: block;
-    color: transparent;
+  display: block;
+  color: transparent;
 }
 /* .header-nav {} */
 .header-navlist {
-    margin: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 /* .header-navitem {} */
 .header-navitem > a {
-    display: block;
-    padding: 10px;
-    color: #333;
-    text-decoration: none;
-    font-weight: bold;
-    border-bottom: 2px solid transparent;
-    transition: border-color .25s;
+  display: block;
+  padding: 10px;
+  color: #333;
+  text-decoration: none;
+  font-weight: bold;
+  border-bottom: 2px solid transparent;
+  transition: border-color 0.25s;
 }
 .header-navitem > a:hover {
-    border-bottom: 2px solid #333;
+  border-bottom: 2px solid #333;
 }
-@media screen and (max-width: 768px){
-    .header {
-        font-size: 12px;
-    }
+@media screen and (max-width: 768px) {
+  .header {
+    font-size: 12px;
+  }
 }
 
 /* 
 hero
 */
 .hero {
-    width: 100vw;
-    height: 100vh;
-    position: relative;
-    overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
 }
 .hero > strong {
-    position: absolute;
-    z-index: 3;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 120px;
-    color: #fff;
-    font-weight: bold;
-    display: block;
-    width: 100%;
-    text-align: center;
+  position: absolute;
+  z-index: 3;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 120px;
+  color: #fff;
+  font-weight: bold;
+  display: block;
+  width: 100%;
+  text-align: center;
 }
 .hero > video {
-    position: absolute;
-    z-index: 1;
-    width: auto;
-    height: 105%;
+  position: absolute;
+  z-index: 1;
+  width: auto;
+  height: 105%;
 }
 .hero-particles {
-    position: absolute;
-    z-index: 2;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
 }
-@media screen and (max-width: 768px){
-    .hero > strong {
-        font-size: 50px;
-    }
+@media screen and (max-width: 768px) {
+  .hero > strong {
+    font-size: 50px;
+  }
 }
 
 /* 
 about
 */
 .about {
-    margin: 0;
-    display: flex;
+  margin: 0;
+  display: flex;
 }
 /* .about-image {} */
 .about-caption {
-    padding-left: 15px;
+  padding-left: 15px;
 }
 .about-headline {
-    margin: 0 0 20px;
-    font-size: 30px;
+  margin: 0 0 20px;
+  font-size: 30px;
 }
 /* .about-description {} */
-@media screen and (max-width: 768px){
-    .about {
-        display: block;
-    }
-    .about-image {
-        max-width: 100%;
-        margin-bottom: 20px;
-    }
-    .about-headline {
-        font-size: 20px;
-        text-align: center;
-    }
+@media screen and (max-width: 768px) {
+  .about {
+    display: block;
+  }
+  .about-image {
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+  .about-headline {
+    font-size: 20px;
+    text-align: center;
+  }
 }
 
 /* 
 feature
 */
 .feature {
-    text-align: center;
-    padding: 0 15px;
+  text-align: center;
+  padding: 0 15px;
 }
 .feature-headline {
-    font-weight: bold;
-    margin: 0 0 20px;
+  font-weight: bold;
+  margin: 0 0 20px;
 }
 .feature-img {
-    margin: 0 0 20px;
+  margin: 0 0 20px;
 }
 .feature-description {
-    margin: 0;
-    text-align: left;
+  margin: 0;
+  text-align: left;
 }
 
 /* 
 card
 */
 .card {
-    padding: 0 10px;
+  padding: 0 10px;
 }
 .card-link {
-    display: block;
-    color: #333;
-    text-decoration: none;
-    position: relative;
-    transition: background-color .25s;
+  display: block;
+  color: #333;
+  text-decoration: none;
+  position: relative;
+  transition: background-color 0.25s;
 }
 .card-link:hover {
-    background-color: #eee;
+  background-color: #eee;
 }
 .card-label {
-    position: absolute;
-    left: 0;
-    top: 0;
-    background-color: #999;
-    color: #fff;
-    display: block;
-    padding: 5px 10px;
-    font-size: 12px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: #999;
+  color: #fff;
+  display: block;
+  padding: 5px 10px;
+  font-size: 12px;
 }
 .card-image {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 .card-info {
-    padding: 5px 10px;
+  padding: 5px 10px;
 }
 /* .card-time {} */
 .card-headline {
-    margin: 0;
+  margin: 0;
 }
 .card-description {
-    margin: 0;
+  margin: 0;
 }
 
 /* 
 avator
 */
 .avator {
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    justify-content: start;
-    padding: 10px;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: start;
+  padding: 10px;
 }
 .avator-name {
-    font-weight: bold;
-    padding-left: 15px;
+  font-weight: bold;
+  padding-left: 15px;
 }
 .avator-image {
-    margin: 0;
-    border-radius: 50%;
-    overflow: hidden;
+  margin: 0;
+  border-radius: 50%;
+  overflow: hidden;
 }
 
 /* 
 button
 */
 .button {
-    display: inline-block;
-    color: #fff;
-    font-weight: bold;
-    background-color: #333;
-    text-align: center;
-    padding: 15px 60px;
-    text-decoration: none;
-    border-radius: 5px;
-    box-shadow: 5px 5px 0 #bbb;
-    transition: box-shadow .25s;
+  display: inline-block;
+  color: #fff;
+  font-weight: bold;
+  background-color: #333;
+  text-align: center;
+  padding: 15px 60px;
+  text-decoration: none;
+  border-radius: 5px;
+  box-shadow: 5px 5px 0 #bbb;
+  transition: box-shadow 0.25s;
 }
 .button:hover {
-    box-shadow: 0 0 0 #bbb;
+  box-shadow: 0 0 0 #bbb;
 }
 .button.button-submission {
-    background: #92d3ca;
+  background: #92d3ca;
 }
 
 /* 
 .select, .input, .radio, .textarea
 */
 .select {
-    border-radius: 5px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    min-width: 500px;
+  border-radius: 5px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  min-width: 500px;
 }
 .input {
-    border-radius: 5px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    min-width: 500px;
+  border-radius: 5px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  min-width: 500px;
 }
 .radio {
-    margin: 0 10px;
+  margin: 0 10px;
 }
 .textarea {
-    border-radius: 5px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    min-width: 500px;
-    min-height: 100px;
+  border-radius: 5px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  min-width: 500px;
+  min-height: 100px;
 }
-@media screen and (max-width: 768px){
-    .select,
-    .input,
-    .textarea {
-        min-width: auto;
-        width: 100%;
-    }
+@media screen and (max-width: 768px) {
+  .select,
+  .input,
+  .textarea {
+    min-width: auto;
+    width: 100%;
+  }
 }
 
 /* 
@@ -341,106 +345,106 @@ form
 */
 /* .form {} */
 .form-table {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 /* .form-table tr {} */
 .form-table th {
-    padding: 10px;
-    text-align: left;
+  padding: 10px;
+  text-align: left;
 }
 .form-table td {
-    padding: 10px;
+  padding: 10px;
 }
 .form-button {
-    margin-top: 20px;
-    text-align: center;
+  margin-top: 20px;
+  text-align: center;
 }
-@media screen and (max-width: 768px){
-    .form-table,
-    .form-table tbody,
-    .form-table tr,
-    .form-table th,
-    .form-table td {
-        display: block;
-    }
+@media screen and (max-width: 768px) {
+  .form-table,
+  .form-table tbody,
+  .form-table tr,
+  .form-table th,
+  .form-table td {
+    display: block;
+  }
 }
 
 /* 
 works
 */
 .works {
-    margin: 40px 0;
-    padding: 20px;
-    text-align: center;
+  margin: 40px 0;
+  padding: 20px;
+  text-align: center;
 }
 .works > img {
-    margin: 0 15px;
+  margin: 0 15px;
 }
-@media screen and (max-width: 768px){
-    .works {
-        margin: 20px 0;
-        padding: 10px;
-    }
-    .works > img {
-        width: 100px;
-        margin: 5px;
-    }
+@media screen and (max-width: 768px) {
+  .works {
+    margin: 20px 0;
+    padding: 10px;
+  }
+  .works > img {
+    width: 100px;
+    margin: 5px;
+  }
 }
 
 /* 
 footer
 */
 .footer {
-    background-color: #333;
-    color: #fff;
+  background-color: #333;
+  color: #fff;
 }
 .footer-map {
-    margin: 0;
-    padding: 40px 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  margin: 0;
+  padding: 40px 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .footer-map > iframe {
-    width: 60%;
+  width: 60%;
 }
 .footer-mapinfo {
-    width: 40%;
-    padding: 15px;
+  width: 40%;
+  padding: 15px;
 }
 .footer-maplogo {
-    font-size: 25px;
-    font-weight: bold;
+  font-size: 25px;
+  font-weight: bold;
 }
 .footer-maplogo > svg {
-    fill: transparent;
-    margin-right: 10px;
+  fill: transparent;
+  margin-right: 10px;
 }
 .footer-mapaddress {
-    font-style: normal;
+  font-style: normal;
 }
 .footer-mapaddress > a {
-    color: #fff;
+  color: #fff;
 }
 .footer-line {
-    border-color: #444;
+  border-color: #444;
 }
 .footer-copy {
-    display: block;
-    text-align: center;
-    padding: 10px;
+  display: block;
+  text-align: center;
+  padding: 10px;
 }
-@media screen and (max-width: 768px){
-    .footer-map {
-        padding: 15px;
-        display: block;
-    }
-    .footer-map > iframe {
-        width: 100%;
-        height: 200px;
-    }
-    .footer-mapinfo {
-        width: 100%;
-        text-align: center;
-    }
+@media screen and (max-width: 768px) {
+  .footer-map {
+    padding: 15px;
+    display: block;
+  }
+  .footer-map > iframe {
+    width: 100%;
+    height: 200px;
+  }
+  .footer-mapinfo {
+    width: 100%;
+    text-align: center;
+  }
 }
